test/simple/correct/DerivingShow3.hs
type T = (Int, Int)

main = showT (13, 42)
