test/simple/typeerrors/Heuristics/OrdChr.hs

main = (ord 65, chr 'a')
